--- a/apps/stories/package.json
+++ b/apps/stories/package.json
@@ -8,11 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@remixicon/react": "^4.6.0",
+    "@emotion/react": "^11.14.0",
+    "react-lorem-ipsum": "^1.4.10",
+    "@hookform/resolvers": "^5.1.1",
+    "@tanstack/react-virtual": "3.13.12",
+    "recharts": "2.15.3",
+    "react-use": "17.6.0",
+    "react-frame-component": "5.2.7",
+    "react-hook-form": "7.58.1",
+    "react-markdown": "10.1.0",
+    "use-mask-input": "3.4.2",
+    "react-payment-inputs": "1.2.0",
+
     "@dev-kit/components": "workspace:*",
     "next": "^15.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "next-themes": "^0.4.6"
+    "next-themes": "^0.4.6",
+    "zod": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^19.2.0",
