--- a/apps/tokens-visualizer/tsconfig.json
+++ b/apps/tokens-visualizer/tsconfig.json
@@ -29,6 +29,9 @@
       "#actors/*": ["./src/actors/*"],
       "#actors": ["./src/actors/"],
 
+      "#store/*": ["./src/store/*"],
+      "#store": ["./src/store/"],
+
       "#hooks/*": ["./src/hooks/*"],
       "#hooks": ["./src/hooks"],
 
