--- a/templates/basic/tsconfig.json
+++ b/templates/basic/tsconfig.json
@@ -26,11 +26,17 @@
       "@/*": ["./*"],
       "~/*": ["./public/*"],
 
-      "#store/*": ["./src/store/*"],
-      "#store": ["./src/store/"],
+      "#/*": ["./src/*"],
+      "#": ["./src"],
+
+      "#apps/*": ["./src/apps/*"],
+      "#apps": ["./src/apps"],
 
       "#actors/*": ["./src/actors/*"],
       "#actors": ["./src/actors/"],
+
+      "#store/*": ["./src/store/*"],
+      "#store": ["./src/store/"],
 
       "#hooks/*": ["./src/hooks/*"],
       "#hooks": ["./src/hooks"],
@@ -38,8 +44,8 @@
       "#components/*": ["./src/components/*"],
       "#components": ["./src/components"],
 
-      "#apps/*": ["./src/apps/*"],
-      "#apps": ["./src/apps"]
+      "#utils/*": ["./src/utils/*"],
+      "#utils": ["./src/utils"]
     }
   },
   "include": [
