--- a/apps/tokens-visualizer/package.json
+++ b/apps/tokens-visualizer/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@dev-kit/components": "workspace:*",
+    "@tanstack/react-virtual": "^3.13.12",
     "next": "^15.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "next-themes": "^0.4.6"
+    "next-themes": "^0.4.6",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^19.0.10",
