--- a/apps/tokens-visualizer/package.json
+++ b/apps/tokens-visualizer/package.json
@@ -8,13 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "graphology": "^0.26.0",
+    "graphology-traversal": "^0.3.1",
     "@dev-kit/components": "workspace:*",
     "@tanstack/react-virtual": "^3.13.12",
     "next": "^15.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "next-themes": "^0.4.6",
-    "clsx": "^2.1.1"
+    "clsx": "^2.1.1",
+    "@use-gesture/react": "^10.3.1"
   },
   "devDependencies": {
     "@types/react": "^19.0.10",
