--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build-storybook": "storybook build",
 
     "start-ui-actors-stateless": "pnpm --filter \"./apps/ui-actors-stateless\" dev",
+    "start-demo-relation-graph": "pnpm --filter \"./demos/relation-graph\" dev",
 
     "packages": "pnpm --filter=./packages/** -r",
     "build": "pnpm packages -- build",
@@ -24,7 +25,6 @@
     "@chakra-ui/react": "^3.27.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@statelyai/agent": "^1.1.6",
     "@statelyai/inspect": "^0.4.0",
     "@xstate/graph": "^3.0.4",
     "@xstate/react": "^6.0.0",
@@ -99,7 +99,6 @@
 
     "prettier-plugin-tailwindcss": "^0.6.14",
     "vite-tsconfig-paths": "^5.1.4",
-    "@storybook/test": "^8.6.14",
     "@storybook/addon-a11y": "^9.0.18",
     "@storybook/addon-docs": "^9.0.18",
     "@storybook/addon-themes": "^9.0.18",
