--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 
     "start-ui-actors-stateless": "pnpm --filter \"./apps/ui-actors-stateless\" dev",
 
+    "start-layouts-demo": "pnpm --filter \"./demos/layouts\" dev",
+
+
     "packages": "pnpm --filter=./packages/** -r",
     "build": "pnpm packages -- build",
     "clean-pkgs": "pnpm -r exec rm -rf dist .swc *.log",
@@ -24,7 +27,6 @@
     "@chakra-ui/react": "^3.27.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@statelyai/agent": "^1.1.6",
     "@statelyai/inspect": "^0.4.0",
     "@xstate/graph": "^3.0.4",
     "@xstate/react": "^6.0.0",
