--- a/demos/jsonpath-tools/package.json
+++ b/demos/jsonpath-tools/package.json
@@ -26,6 +26,7 @@
     "@lezer/lr": "^1.0.0",
     "@lezer/highlight": "^1.0.0",
     "@lezer/json": "^1.0.0",
+    "@lezer/javascript": "1.5.4",
     "markdown-it": "^14.1.0",
 
     "ajv": "^8.17.1",
@@ -35,7 +36,11 @@
     "jsonpointer": "^5.0.1",
     "uri-js": "^4.4.1",
 
-
+    "@tabler/icons-react": "^3.29.0",
+    "react-icons": "^5.5.0",
+    "@mantine/core": "^7.16.2",
+    "@mantine/form": "^7.17.0",
+    "@mantine/hooks": "^7.16.2",
     "@dev-kit/components": "workspace:*",
     "next": "^15.5.4",
     "react": "^19.2.0",
