--- a/demos/jsonpath-tools/tsconfig.json
+++ b/demos/jsonpath-tools/tsconfig.json
@@ -30,7 +30,8 @@
 
       "#app/*": ["./src/app/*"],
       "#app": ["./src/app"],
-
+      "#modules/*": ["./src/modules/*"],
+      "#modules": ["./src/modules"],
 
       "#machines/*": ["./src/machines/*"],
       "#machines": ["./src/machines"],
