--- a/demos/survey-ui/package.json
+++ b/demos/survey-ui/package.json
@@ -11,6 +11,7 @@
 
     "react-icons": "^5.5.0",
     "@dev-kit/components": "workspace:*",
+    "@dev-kit/icons": "workspace:*",
     "next": "^15.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
