--- a/demos/survey-ui/tsconfig.json
+++ b/demos/survey-ui/tsconfig.json
@@ -33,6 +33,9 @@
       "#modules/*": ["./src/modules/*"],
       "#modules": ["./src/modules"],
 
+      "#assets/*": ["./src/assets/*"],
+      "#assets": ["./src/assets"],
+
       "#machines/*": ["./src/machines/*"],
       "#machines": ["./src/machines"],
 
@@ -54,6 +57,8 @@
     }
   },
   "include": [
+    "svgr.d.ts",
+
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
