--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@svgo/jsx": "^0.4.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
