--- a/demos/survey-ui/package.json
+++ b/demos/survey-ui/package.json
@@ -8,7 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-
+    "katex": "^0.16.25",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "harden-react-markdown": "^1.1.5",
+    "use-stick-to-bottom": "^1.1.1",
     "react-icons": "^5.5.0",
     "@dev-kit/components": "workspace:*",
     "@dev-kit/icons": "workspace:*",
@@ -19,7 +24,6 @@
     "react18-json-view": "^0.2.9"
   },
   "devDependencies": {
-
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "typescript": "^5.8.3",
