--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 
     "start-ui-actors-stateless": "pnpm --filter \"./apps/ui-actors-stateless\" dev",
 
+    "start-demo-ui-extended": "pnpm --filter \"./demos/ui-extended\" dev",
+
+
     "packages": "pnpm --filter=./packages/** -r",
     "build": "pnpm packages -- build",
     "clean-pkgs": "pnpm -r exec rm -rf dist .swc *.log",
