--- a/demos/ui-extended/package.json
+++ b/demos/ui-extended/package.json
@@ -8,6 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "memoize-one": "^6.0.0",
+    "tiny-invariant": "^1.3.3",
+    "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
+    "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.1.0",
+    "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^3.2.8",
+    "@atlaskit/pragmatic-drag-and-drop-auto-scroll": "^2.1.2",
+    "@atlaskit/pragmatic-drag-and-drop-live-region": "^1.3.1",
+    "@atlaskit/pragmatic-drag-and-drop-flourish": "^2.0.8",
+    "@atlaskit/pragmatic-drag-and-drop-react-accessibility": "^2.1.4",
     "codemirror": "^6.0.2",
     "@codemirror/state": "^6.5.2",
     "@codemirror/language": "^6.11.3",
