--- a/demos/ui-extended/package.json
+++ b/demos/ui-extended/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@remoteoss/json-schema-form": "^0.12.2-beta.0",
     "memoize-one": "^6.0.0",
     "tiny-invariant": "^1.3.3",
     "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
