--- a/demos/ui-extended/package.json
+++ b/demos/ui-extended/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "react-redux": "^7.1.3",
     "@remoteoss/json-schema-form": "^0.12.2-beta.0",
     "memoize-one": "^6.0.0",
     "tiny-invariant": "^1.3.3",
@@ -80,6 +81,9 @@
 
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.5",
+    "redux": "^4.0.4",
+    "redux-mock-store": "1.5.3",
     "@types/valid-url": "^1.0.7",
     "@types/sortablejs": "^1.15.8",
     "@types/markdown-to-jsx": "^7.0.1",
