--- a/demos/ui-extended/package.json
+++ b/demos/ui-extended/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "5.5.2",
+    "antd": "5.27.0",
+    "json-schema-to-ts": "^3.1.1",
     "react-redux": "^7.1.3",
     "@remoteoss/json-schema-form": "^0.12.2-beta.0",
     "memoize-one": "^6.0.0",
@@ -81,6 +84,7 @@
 
   },
   "devDependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@types/react-redux": "^7.1.5",
     "redux": "^4.0.4",
     "redux-mock-store": "1.5.3",
