--- a/demos/ui-extended/package.json
+++ b/demos/ui-extended/package.json
@@ -8,6 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "react-error-boundary": "^6.0.0",
+    "@stoplight/json": "^3.21.7",
+    "@stoplight/json-schema-tree": "^4.0.0",
+    "@types/json-schema": "^7.0.15",
+    "@stoplight/types": "^14.1.1",
+    "fnv-plus": "^1.3.1",
+    "jotai": "^2.15.0",
     "@ant-design/icons": "5.5.2",
     "antd": "5.27.0",
     "json-schema-to-ts": "^3.1.1",
@@ -95,7 +102,6 @@
     "@types/json-schema-merge-allof": "^0.6.5",
     "@types/react-is": "^18.3.1",
     "deep-freeze-es6": "^4.0.1",
-
 
     "ajv-i18n": "^4.2.0",
     "@types/jsonpointer": "^4.0.2",
