--- a/demos/ui-extended/package.json
+++ b/demos/ui-extended/package.json
@@ -46,6 +46,7 @@
     "dayjs-plugin-utc": "^0.1.2",
     "sortablejs": "^1.15.6",
     "ebnf": "^1.9.1",
+    "code-inspector-plugin": "^1.2.10",
 
     "classnames": "^2.5.1",
     "short-unique-id": "^5.3.2",
