--- a/demos/ui-extended/package.json
+++ b/demos/ui-extended/package.json
@@ -8,6 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "json-schema-to-typescript-lite": "15.0.0",
+    "json-schema": "^0.4.0",
+    "allof-merge": "0.6.7",
+    "@pothos/core": "4.10.0",
+    "openapi-types": "12.1.3",
+    "@apidevtools/json-schema-ref-parser": "14.1.1",
+    "graphql": "16.11.0",
+    "graphql-type-json": "0.3.2",
+    "graphql-yoga": "5.16.0",
+    "@graphql-typed-document-node/core": "3.2.0",
+    "loglevel": "^1.9.2",
+    "@cloudscape-design/global-styles": "^1.0.47",
+    "@cloudscape-design/components": "^3.0.1121",
+    "@cloudscape-design/board-components": "^3.0.126",
+    "@cloudscape-design/chat-components": "^1.0.72",
+    "@cloudscape-design/chart-components": "^1.0.14",
+    "@cloudscape-design/code-view": "^3.0.77",
+    "@cloudscape-design/collection-hooks": "^1.0.77",
+    "@cloudscape-design/design-tokens": "^3.0.63",
     "oas": "^28.3.0",
     "react-error-boundary": "^6.0.0",
     "@stoplight/json": "^3.21.7",
@@ -31,6 +50,8 @@
     "@atlaskit/pragmatic-drag-and-drop-flourish": "^2.0.8",
     "@atlaskit/pragmatic-drag-and-drop-react-accessibility": "^2.1.4",
     "codemirror": "^6.0.2",
+    "yaml": "2.8.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@codemirror/state": "^6.5.2",
     "@codemirror/language": "^6.11.3",
     "@codemirror/lang-json": "^6.0.2",
@@ -47,7 +68,7 @@
     "sortablejs": "^1.15.6",
     "ebnf": "^1.9.1",
     "code-inspector-plugin": "^1.2.10",
-
+    "@sindresorhus/slugify": "3.0.0",
     "classnames": "^2.5.1",
     "short-unique-id": "^5.3.2",
     "fast-equals": "^5.3.2",
@@ -72,7 +93,6 @@
     "@uidotdev/usehooks": "^2.4.1",
     "json-schema-merge-allof": "^0.8.1",
     "jsonpointer": "^5.0.1",
-    "json-schema": "^0.4.0",
     "lucide-react": "^0.546.0",
     "@emotion/is-prop-valid": "^1.4.0",
     "@emotion/cache": "^11.14.0",
@@ -93,6 +113,8 @@
 
   },
   "devDependencies": {
+    "@types/json-schema": "7.0.15",
+    "@types/loglevel": "^1.6.3",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@types/react-redux": "^7.1.5",
     "redux": "^4.0.4",
@@ -100,7 +122,6 @@
     "@types/valid-url": "^1.0.7",
     "@types/sortablejs": "^1.15.8",
     "@types/markdown-to-jsx": "^7.0.1",
-    "@types/json-schema": "^7.0.15",
     "@types/json-schema-merge-allof": "^0.6.5",
     "@types/react-is": "^18.3.1",
     "deep-freeze-es6": "^4.0.1",
