--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -9,17 +9,18 @@
   },
   "dependencies": {
     "@dev-kit/components": "workspace:*",
+    "@dev-kit/icons": "workspace:*",
     "next": "^15.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "next-themes": "^0.4.6"
   },
   "devDependencies": {
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "typescript": "^5.8.3",
     "@types/node": "^20.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
