--- a/demos/layout-builder/package.json
+++ b/demos/layout-builder/package.json
@@ -5,22 +5,37 @@
   "scripts": {
     "dev": "next dev -p 3050",
     "build": "next build",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
     "start": "next start"
   },
   "dependencies": {
+    "@cloudflare/workers-types": "^4.20251106.1",
+    "@opennextjs/cloudflare": "^1.11.1",
     "@dev-kit/components": "workspace:*",
     "@dev-kit/icons": "workspace:*",
     "next": "^15.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "next-themes": "^0.4.6"
+    "next-themes": "^0.4.6",
+
+    "@next/third-parties": "^15.5.4",
+    "@reduxjs/toolkit": "^2.9.0",
+    "clsx": "^2.1.1",
+    "react-redux": "^9.2.0",
+    "three": "^0.180.0"
   },
   "devDependencies": {
+    "wrangler": "^4.46.0",
+    "@tailwindcss/postcss": "^4",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "typescript": "^5.8.3",
     "@types/node": "^20.0.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "@types/three": "^0.180.0",
+    "tailwindcss": "^4"
   }
 }
