--- a/demos/layout-builder/tsconfig.json
+++ b/demos/layout-builder/tsconfig.json
@@ -23,8 +23,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
+      "@/src/*": ["./*"],
       "~/*": ["./public/*"],
+
 
       "#actors/*": ["./src/actors/*"],
       "#actors": ["./src/actors/"],
@@ -36,7 +37,10 @@
       "#components": ["./src/components"],
 
       "#app/*": ["./src/app/*"],
-      "#app": ["./src/app"]
+      "#app": ["./src/app"],
+
+      "#store/*": ["./src/store/*"],
+      "#store": ["./src/store"]
     }
   },
   "include": [
