--- a/templates/cloudflare/package.json
+++ b/templates/cloudflare/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20251106.1",
+    "@opennextjs/cloudflare": "^1.11.1",
     "@dev-kit/components": "workspace:*",
     "@dev-kit/icons": "workspace:*",
     "next": "^15.5.4",
