--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "react-use-measure": "^2.1.7",
     "@cloudflare/workers-types": "^4.20251106.1",
     "@opennextjs/cloudflare": "^1.11.1",
     "@dev-kit/components": "workspace:*",
