--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,6 +11,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
+    "json-logic-js": "^2.0.0",
+    "tslib": "^2.8.1",
     "react-rnd": "^10.5.2",
     "react-use": "17.6.0",
     "react-use-measure": "^2.1.7",
@@ -24,6 +28,7 @@
     "next-themes": "^0.4.6"
   },
   "devDependencies": {
+    "@rslib/core": "^0.15.0",
     "wrangler": "^4.46.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
