--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -25,7 +25,8 @@
     "next": "^15.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "next-themes": "^0.4.6"
+    "next-themes": "^0.4.6",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@rslib/core": "^0.15.0",
@@ -35,6 +36,10 @@
     "typescript": "^5.8.3",
     "@types/node": "^20.0.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "postcss": "^8.5.6"
+  },
+  "peerDependencies": {
+    "@tailwindcss/postcss": "^4.1.17"
   }
 }
