--- a/demos/dockview/tsconfig.json
+++ b/demos/dockview/tsconfig.json
@@ -27,6 +27,9 @@
       "@/*": ["./*"],
       "~/*": ["./public/*"],
 
+      "#actor-kit/*": ["./src/actor-kit/*"],
+      "#actor-kit": ["./src/actor-kit/"],
+
       "#actors/*": ["./src/actors/*"],
       "#actors": ["./src/actors/"],
 
