--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,6 +11,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "fast-json-patch": "^3.1.1",
+    "jose": "^6.1.3",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "json-logic-js": "^2.0.0",
