--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,6 +11,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "jsonpath-plus": "^10.3.0",
+    "uuid":"^13.0.0",
+    "random-word-slugs":"^0.1.7",
     "fast-json-patch": "^3.1.1",
     "jose": "^6.1.3",
     "ajv": "^8.12.0",
