--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,6 +11,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/css": "^11.11.2",
+    "axios": "^1.1.2",
+    "events": "^3.3.0",
+    "qs": "^6.11.0",
+    "echarts-for-react": "^3.0.2",
+    "monaco-editor": "0.34.1",
+    "dayjs": "^1.11.11",
+    "winston": "^3.13.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@uiw/color-convert": "^2.1.1",
+    "@uiw/react-color-sketch": "^2.1.1",
+    "@ant-design/icons": "4.8.1",
+    "antd": "4.24.13",
+    "@blockly/field-dependent-dropdown": "^4.0.6",
+    "blockly": "^10.0.0",
+    "js-beautify": "^1.15.1",
     "jsonpath-plus": "^10.3.0",
     "uuid":"^13.0.0",
     "random-word-slugs":"^0.1.7",
@@ -34,6 +52,9 @@
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
+    "@types/qs": "^6.9.15",
+    "@types/js-beautify": "^1.14.3",
+    "file-loader": "^6.2.0",
     "@rslib/core": "^0.15.0",
     "wrangler": "^4.46.0",
     "@types/react": "^19.2.2",
