--- a/demos/dockview/tsconfig.json
+++ b/demos/dockview/tsconfig.json
@@ -27,6 +27,9 @@
       "@/*": ["./*"],
       "~/*": ["./public/*"],
 
+      "#rui/*": ["./src/rui/*"],
+      "#rui": ["./src/rui/"],
+
       "#actor-kit/*": ["./src/actor-kit/*"],
       "#actor-kit": ["./src/actor-kit/"],
 
