--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,11 +11,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
+    "ace-builds": "^1.35.4",
+    "@wibetter/json-utils": "^6.0.1",
+    "antd": "^5.20.1",
+    "braft-editor": "^2.3.9",
+    "braft-extensions": "^0.1.1",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
+    "moment": "^2.27.0",
+    "react-ace": "^12.0.0",
+    "react-color": "^2.19.3",
+    "qs": "^6.13.1",
+
     "oas": "^28.6.2",
     "@emotion/css": "^11.11.2",
     "axios": "^1.1.2",
     "events": "^3.3.0",
-    "qs": "^6.11.0",
     "echarts-for-react": "^3.0.2",
     "monaco-editor": "0.34.1",
     "dayjs": "^1.11.11",
@@ -25,8 +37,6 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@uiw/color-convert": "^2.1.1",
     "@uiw/react-color-sketch": "^2.1.1",
-    "@ant-design/icons": "4.8.1",
-    "antd": "4.24.13",
     "@blockly/field-dependent-dropdown": "^4.0.6",
     "blockly": "^10.0.0",
     "js-beautify": "^1.15.1",
