--- a/demos/dockview/tsconfig.json
+++ b/demos/dockview/tsconfig.json
@@ -33,6 +33,9 @@
       "#actor-kit/*": ["./src/actor-kit/*"],
       "#actor-kit": ["./src/actor-kit/"],
 
+      "#json-tree-view/*": ["./src/components/json-tree-view/*"],
+      "#json-tree-view": ["./src/components/json-tree-view/"],
+
       "#datasets/*": ["./src/datasets/*"],
       "#datasets": ["./src/datasets/"],
 
