--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,6 +11,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zag-js/i18n-utils": "^1.31.1",
+    "@zag-js/dom-query": "^1.31.1",
     "@zag-js/async-list": "^1.31.1",
     "@zag-js/core": "^1.31.1  ",
     "@zag-js/tree-view": "^1.31.1",
