--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zag-js/collapsible": "^1.31.1",
     "@zag-js/avatar": "^1.31.1",
     "@zag-js/i18n-utils": "^1.31.1",
     "@zag-js/dom-query": "^1.31.1",
