--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -15,6 +15,8 @@
     "tiny-invariant": "^1.3.3",
     "@atlaskit/pragmatic-drag-and-drop": "1.7.7",
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "1.1.0",
+    "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator":
+      "^3.2.10",
     "@atlaskit/pragmatic-drag-and-drop-live-region": "1.3.1",
     "@zag-js/collapsible": "^1.31.1",
     "@zag-js/avatar": "^1.31.1",
