--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,15 +11,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "react-popper":"^2.3.0",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-context": "^1.1.3",
+    "@radix-ui/react-primitive": "^2.1.4",
+    "react-popper": "^2.3.0",
     "@popperjs/core": "^2.11.8",
     "react-uid": "^2.4.0",
     "memoize-one": "^6.0.0",
     "tiny-invariant": "^1.3.3",
     "@atlaskit/pragmatic-drag-and-drop": "1.7.7",
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "1.1.0",
-    "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator":
-      "^3.2.10",
+    "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^3.2.10",
     "@atlaskit/pragmatic-drag-and-drop-live-region": "1.3.1",
     "@zag-js/collapsible": "^1.31.1",
     "@zag-js/avatar": "^1.31.1",
@@ -45,7 +50,6 @@
     "react-ace": "^12.0.0",
     "react-color": "^2.19.3",
     "qs": "^6.13.1",
-
     "oas": "^28.6.2",
     "@emotion/css": "^11.11.2",
     "axios": "^1.1.2",
@@ -63,8 +67,8 @@
     "blockly": "^10.0.0",
     "js-beautify": "^1.15.1",
     "jsonpath-plus": "^10.3.0",
-    "uuid":"^13.0.0",
-    "random-word-slugs":"^0.1.7",
+    "uuid": "^13.0.0",
+    "random-word-slugs": "^0.1.7",
     "fast-json-patch": "^3.1.1",
     "jose": "^6.1.3",
     "ajv": "^8.12.0",
@@ -85,6 +89,8 @@
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
+    "@fluentui/react-tabster": "^9.26.11",
+    "@faker-js/faker": "^10.1.0",
     "@types/qs": "^6.9.15",
     "@types/js-beautify": "^1.14.3",
     "file-loader": "^6.2.0",
