--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -26,6 +26,8 @@
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "1.1.0",
     "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^3.2.10",
     "@atlaskit/pragmatic-drag-and-drop-live-region": "1.3.1",
+    "@atlaskit/pragmatic-drag-and-drop-auto-scroll": "^2.1.2",
+    "@atlaskit/pragmatic-drag-and-drop-flourish": "^2.0.10",
     "@zag-js/collapsible": "^1.31.1",
     "@zag-js/avatar": "^1.31.1",
     "@zag-js/i18n-utils": "^1.31.1",
