--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,6 +11,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "jotai": "^2.4.10",
+    "jotai-devtools": "^0.13.0",
+    "jotai-history": "^0.5.0",
+    "jotai-tanstack-query": "^0.11.0",
+    "tailwind-merge": "^3.4.0",
+    "clsx": "^2.1.1",
     "yjs": "^13.6.18",
     "zustand-middleware-yjs": "^1.3.1",
     "immer": "^9.0.21",
