--- a/demos/dockview/tsconfig.json
+++ b/demos/dockview/tsconfig.json
@@ -27,23 +27,37 @@
       "@/*": ["./*"],
       "~/*": ["./public/*"],
 
+      "#app/*": ["./src/app/*"],
+      "#app": ["./src/app"],
+
+      "#modules/*": ["./src/modules/*"],
+      "#modules": ["./src/modules"],
+
+      "#components/*": ["./src/components/*"],
+      "#components": ["./src/components"],
+
+
+      /** modules */
+
+      "#json-tree/*": ["./src/modules/json-tree/*"],
+      "#json-tree": ["./src/modules/json-tree/"],
+      "#drag-and-drop/*": ["./src/modules/drag-and-drop/*"],
+      "#drag-and-drop": ["./src/modules/drag-and-drop/"],
+
+
+
+      /** possible deletion */
+
       "#atlas-ui/*": ["./src/components/atlas/ui/*"],
       "#atlas-ui": ["./src/components/atlas/ui/"],
       "#atlas-packages/*": ["./src/components/atlas/packages/*"],
       "#atlas-packages": ["./src/components/atlas/packages/"],
 
-
-
       "#shared/*": ["./src/modules/json-tree/*"],
       "#shared": ["./src/modules/json-tree/"],
 
-
-      "#json-tree/*": ["./src/modules/json-tree/*"],
-      "#json-tree": ["./src/modules/json-tree/"],
-
       "#drag-drop/*": ["./src/components/pragmatic-drag-drop/tree/*"],
       "#drag-drop": ["./src/components/pragmatic-drag-drop/tree/"],
-
 
       "#rui/*": ["./src/rui/*"],
       "#rui": ["./src/rui/"],
@@ -60,18 +74,15 @@
       "#hooks/*": ["./src/hooks/*"],
       "#hooks": ["./src/hooks"],
 
-      "#components/*": ["./src/components/*"],
-      "#components": ["./src/components"],
+
 
       "#views/*": ["./src/views/*"],
       "#views": ["./src/views"],
 
 
-      "#app/*": ["./src/app/*"],
-      "#app": ["./src/app"],
 
-      "#modules/*": ["./src/modules/*"],
-      "#modules": ["./src/modules"],
+
+
 
       "#xflows-plugin-react/*": ["./src/orchestrator/packages/plugin-react/*"],
       "#xflows-plugin-react": ["./src/orchestrator/packages/plugin-react"],
