--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "cheerio": "^1.1.2",
     "@tanstack/react-virtual": "^3.13.18",
     "class-variance-authority": "^0.7.1",
     "jotai": "^2.4.10",
