--- a/demos/dockview/tsconfig.json
+++ b/demos/dockview/tsconfig.json
@@ -48,6 +48,11 @@
       "#adaptive-modules/*": ["./src/app/adaptive/modules/*"],
       "#adaptive-modules": ["./src/app/adaptive/modules"],
 
+      "#adaptive-json-tree/*": ["./src/app/adaptive/modules/adaptive-json-tree/*"],
+      "#adaptive-json-tree": ["./src/app/adaptive/modules/adaptive-json-tree"],
+
+      //adaptive-json-tree
+
       "#adaptive-tool/*": ["./src/app/adaptive/modules/adaptive-tool/*"],
       "#adaptive-tool": ["./src/app/adaptive/modules/adaptive-tool"],
 
