--- a/demos/dockview/tsconfig.json
+++ b/demos/dockview/tsconfig.json
@@ -65,6 +65,9 @@
       "#adaptive-tree/*": ["./src/app/adaptive/modules/adaptive-tree/*"],
       "#adaptive-tree": ["./src/app/adaptive/modules/adaptive-tree"],
 
+      "#adaptive-menu/*": ["./src/app/adaptive/modules/adaptive-menu/*"],
+      "#adaptive-menu": ["./src/app/adaptive/modules/adaptive-menu"],
+
       "#dynamic-tree/*": ["./src/app/adaptive/modules/dynamic-tree/*"],
       "#dynamic-tree": ["./src/app/adaptive/modules/dynamic-tree"],
 
