--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,6 +11,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
