--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,6 +11,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@codemirror/highlight": "^0.19.8",
+    "@uiw/react-codemirror": "^4.25.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/rangeset": "^0.19.9",
+    "@codemirror/state": "^6.5.4",
+    "@codemirror/matchbrackets": "^0.19.4",
+    "@codemirror/search": "^6.6.0",
+    "@codemirror/gutter": "^0.19.9",
+    "@codemirror/view": "^6.39.11",
+    "@heroicons/react": "^2.2.0",
+    "@js-temporal/polyfill": "^0.5.1",
+    "json-source-map": "^0.6.1",
+    "@xmldom/xmldom": "^0.8.11",
+    "@jsonhero/fuzzy-json-search": "^0.2.2",
+    "@jsonhero/json-infer-types": "^1.2.11",
+    "@jsonhero/json-schema-fns": "^0.0.1",
+    "@jsonhero/path": "^1.0.21",
+    "@jsonhero/schema-infer": "^0.1.5",
+    "@swan-io/boxed": "^3.2.1",
+    "dompurify": "^3.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "@hookform/resolvers": "^5.2.2",
