--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,6 +11,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tanstack/react-virtual": "^3.13.18",
+    "downshift": "^9.0.13",
     "@apihero/fetch": "^0.1.0",
     "@codemirror/highlight": "^0.19.8",
     "@uiw/react-codemirror": "^4.25.4",
