--- a/demos/dockview/package.json
+++ b/demos/dockview/package.json
@@ -11,16 +11,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "jwt-decode": "^4.0.0",
     "react-dropzone": "^14.3.8",
     "react-hotkeys-hook": "^5.2.3",
     "color": "^5.0.3",
     "@tanstack/react-virtual": "^3.13.18",
     "downshift": "^9.0.13",
     "@apihero/fetch": "^0.1.0",
+    "@uiw/react-codemirror": "^4.3.3",
+    "@codemirror/lang-json": "^0.19.1",
+    "@codemirror/rangeset": "^0.19.6",
+
+
     "@codemirror/highlight": "^0.19.8",
-    "@uiw/react-codemirror": "^4.25.4",
-    "@codemirror/lang-json": "^6.0.2",
-    "@codemirror/rangeset": "^0.19.9",
+
     "@codemirror/state": "^6.5.4",
     "@codemirror/matchbrackets": "^0.19.4",
     "@codemirror/search": "^6.6.0",
