--- a/demos/json-playground/package.json
+++ b/demos/json-playground/package.json
@@ -11,6 +11,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss": "^4.1.18",
+    "clsx": "^2.1.1",
+    "class-variance-authority": "^0.7.1",
     "react-rnd": "^10.5.2",
     "react-use": "^17.6.0",
     "@cloudflare/workers-types": "^4.20251106.1",
@@ -31,5 +36,8 @@
     "@types/node": "^20.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
+  },
+  "peerDependencies": {
+    "@tailwindcss/postcss": "^4.1.18"
   }
 }
