--- a/demos/json-playground/package.json
+++ b/demos/json-playground/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "nanoid": "^5.1.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss": "^4.1.18",
