--- a/demos/json/package.json
+++ b/demos/json/package.json
@@ -11,6 +11,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "ajv-formats": "^3.0.1",
+    "zod": "^4.0.17",
     "reactflow": "^11.11.4",
     "@apidevtools/json-schema-ref-parser": "^15.1.2",
     "@monaco-editor/react": "^4.7.0",
@@ -49,6 +58,10 @@
     "react-diff-viewer-continued": "^3.4.0"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.52.11",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@tanstack/react-query": "^5.85.0",
+    "sonner": "^2.0.7",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/papaparse": "^5.5.2",
     "@types/jmespath": "^0.15.2",
@@ -63,6 +76,7 @@
     "react-dom": "^19.2.0"
   },
   "peerDependencies": {
+    "monaco-editor": ">= 0.25.0 < 1",
     "@tailwindcss/postcss": "^4.1.17"
   }
 }
