--- a/demos/json/package.json
+++ b/demos/json/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-separator": "^1.1.8",
+
+
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "ajv-formats": "^3.0.1",
     "zod": "^4.0.17",
     "reactflow": "^11.11.4",
