--- a/demos/json/package.json
+++ b/demos/json/package.json
@@ -17,8 +17,6 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-separator": "^1.1.8",
-
-
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "ajv-formats": "^3.0.1",
@@ -61,10 +59,24 @@
     "react-diff-viewer-continued": "^3.4.0"
   },
   "devDependencies": {
+    "@radix-ui/react-portal": "^1.1.10",
+    "@use-gesture/react": "^10.3.1",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "colord": "^2.9.3",
+    "dequal": "^2.0.3",
+    "merge-value": "^1.0.0",
+    "react-colorful": "^5.6.1",
+    "react-dropzone": "^14.3.8",
+    "v8n": "^1.5.1",
+    "zustand": "^5.0.10",
+    "react-use-measure": "^2.1.7",
+    "react-datepicker": "^9.1.0",
     "@microsoft/api-extractor": "^7.52.11",
     "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-query": "^5.85.0",
     "sonner": "^2.0.7",
+    "react-use": "^17.6.0",
+    "noisejs": "^2.1.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/papaparse": "^5.5.2",
     "@types/jmespath": "^0.15.2",
@@ -79,6 +91,7 @@
     "react-dom": "^19.2.0"
   },
   "peerDependencies": {
+    "@types/react-datepicker": "^7.0.0",
     "monaco-editor": ">= 0.25.0 < 1",
     "@tailwindcss/postcss": "^4.1.17"
   }
