--- a/demos/json/package.json
+++ b/demos/json/package.json
@@ -11,6 +11,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "react18-json-view": "^0.2.9",
+    "immer": "^11.1.3",
+    "@xstate/store-react": "^1.0.1",
+    "@tanstack/db": "^0.5.23",
+    "@tanstack/react-db": "^0.1.67",
+    "@uiw/react-codemirror": "^4.25.4",
     "@codemirror/commands": "^6.8.0",
     "@codemirror/history": "^0.19.2",
     "@codemirror/lang-json": "^6.0.2",
