--- a/demos/json/package.json
+++ b/demos/json/package.json
@@ -11,29 +11,41 @@
     "start": "next start"
   },
   "dependencies": {
+    "@codemirror/commands": "^6.10.0",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.11",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/language": "^6.11.3",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.8",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tabler/icons-react": "^3.36.1",
     "react18-json-view": "^0.2.9",
     "immer": "^11.1.3",
     "@xstate/store-react": "^1.0.1",
     "@tanstack/db": "^0.5.23",
     "@tanstack/react-db": "^0.1.67",
     "@uiw/react-codemirror": "^4.25.4",
-    "@codemirror/commands": "^6.8.0",
     "@codemirror/history": "^0.19.2",
     "@codemirror/lang-json": "^6.0.2",
-    "@codemirror/lang-javascript": "^6.0.2",
-    "@codemirror/language": "^6.10.8",
-    "@codemirror/state": "^6.5.2",
-    "@codemirror/view": "^6.36.2",
     "codemirror": "^6.0.1",
-    "react-is": "^19.2.3",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-switch": "^1.2.6",
-    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@radix-ui/react-separator": "^1.1.8",
-    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "react-resizable-panels": "^3.0.6",
     "ajv-formats": "^3.0.1",
     "zod": "^4.0.17",
     "reactflow": "^11.11.4",
@@ -41,9 +53,6 @@
     "@monaco-editor/react": "^4.7.0",
     "elkjs": "^0.11.0",
     "jszip": "^3.10.1",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-virtual": "^3.13.12",
     "@vercel/analytics": "^1.5.0",
     "ajv": "^8.17.1",
@@ -75,6 +84,8 @@
     "react-is": "^19.2.3"
   },
   "devDependencies": {
+    "postcss": "^8.5.6",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/react-is": "^19.2.0",
     "@radix-ui/react-portal": "^1.1.10",
     "@use-gesture/react": "^10.3.1",
@@ -88,7 +99,6 @@
     "zustand": "^5.0.10",
     "react-use-measure": "^2.1.7",
     "@microsoft/api-extractor": "^7.52.11",
-    "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-query": "^5.85.0",
     "sonner": "^2.0.7",
     "react-use": "^17.6.0",
@@ -103,10 +113,10 @@
     "@types/react-dom": "^19.2.2",
     "typescript": "^5.8.3",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "@tailwindcss/postcss": "^4.1.17"
   },
   "peerDependencies": {
-    "monaco-editor": ">= 0.25.0 < 1",
-    "@tailwindcss/postcss": "^4.1.17"
+    "monaco-editor": ">= 0.25.0 < 1"
   }
 }
