--- a/demos/json/package.json
+++ b/demos/json/package.json
@@ -11,6 +11,18 @@
     "start": "next start"
   },
   "dependencies": {
+
+    "@codemirror/search": "^6.6.0",
+    "@replit/codemirror-indentation-markers": "^6.5.3",
+    "cm6-graphql": "^0.2.1",
+    "graphql": "^16.12.0",
+    "@types/graphql": "^14.5.0",
+    "@lezer/highlight": "^1.2.3",
+    "fast-deep-equal": "^3.1.3",
+    "radash": "^12.1.1",
+    "react-scan": "^0.4.3",
+    "@codemirror/autocomplete": "^6.18.7",
+    "@codemirror/lint": "^6.9.3",
     "@codemirror/commands": "^6.10.0",
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-html": "^6.4.11",
