--- a/demos/json/package.json
+++ b/demos/json/package.json
@@ -11,7 +11,6 @@
     "start": "next start"
   },
   "dependencies": {
-
     "@codemirror/search": "^6.6.0",
     "@replit/codemirror-indentation-markers": "^6.5.3",
     "cm6-graphql": "^0.2.1",
@@ -58,9 +57,11 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "react-resizable-panels": "^3.0.6",
+    "classnames": "^2.5.1",
     "ajv-formats": "^3.0.1",
     "zod": "^4.0.17",
     "reactflow": "^11.11.4",
+    "re-resizable": "^6.11.2",
     "@apidevtools/json-schema-ref-parser": "^15.1.2",
     "@monaco-editor/react": "^4.7.0",
     "elkjs": "^0.11.0",
