--- a/apps/stories/package.json
+++ b/apps/stories/package.json
@@ -20,9 +20,9 @@
     "react-markdown": "10.1.0",
     "use-mask-input": "3.4.2",
     "react-payment-inputs": "1.2.0",
-
     "@dev-kit/components": "workspace:*",
-    "next": "^15.5.4",
+    "@dev-kit/experiments": "workspace:*",
+    "next": "^16.1.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "next-themes": "^0.4.6",
@@ -32,6 +32,5 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "typescript": "^5.8.3"
-
   }
 }
