--- a/apps/ui-docs/tsconfig.json
+++ b/apps/ui-docs/tsconfig.json
@@ -28,7 +28,7 @@
     ],
     "paths": {
       "fumadocs-mdx:collections/*": [
-        ".source/*"
+        "./.source/*"
       ],
       "@/*": [
         "./*"
