--- a/apps/ui-docs/package.json
+++ b/apps/ui-docs/package.json
@@ -103,9 +103,13 @@
     "next": "^16.1.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "next-themes": "^0.4.6"
+    "next-themes": "^0.4.6",
+    "react-scan": "^0.4.3"
   },
   "devDependencies": {
+    "code-inspector-plugin": "^1.4.2",
+    "@types/glob": "^9.0.0",
+    "glob": "^13.0.3",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/mdx": "^2.0.13",
     "wrangler": "^4.65.0",
