--- a/demos/adaptive-panel/package.json
+++ b/demos/adaptive-panel/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20251106.1",
+    "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
     "@opennextjs/cloudflare": "^1.11.1",
     "@dev-kit/components": "workspace:*",
     "@dev-kit/icons": "workspace:*",
