--- a/demos/adaptive-panel/package.json
+++ b/demos/adaptive-panel/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "tiny-invariant": "^1.3.3",
     "@cloudflare/workers-types": "^4.20251106.1",
     "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
     "@opennextjs/cloudflare": "^1.11.1",
@@ -19,7 +20,8 @@
     "next": "^16.1.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "next-themes": "^0.4.6"
+    "next-themes": "^0.4.6",
+    "bind-event-listener": "^3.0.0"
   },
   "devDependencies": {
     "wrangler": "^4.46.0",
